Improve Nowa JMH benchmark